--- a/pom.xml
+++ b/pom.xml
@@ -50,6 +50,19 @@
 			<version>20210307</version>
 		</dependency>
 
+		<!-- Dependencia JPA -->
+		<dependency>
+			<groupId>org.springframework.boot</groupId>
+			<artifactId>spring-boot-starter-data-jpa</artifactId>
+		</dependency>
+
+		<!-- Dependencia para postgreSQL DRIVER -->
+		<dependency>
+			<groupId>org.postgresql</groupId>
+			<artifactId>postgresql</artifactId>
+			<scope>runtime</scope>
+		</dependency>
+
 		<!-- Dependencia para las pruebas -->
 		<dependency>
 			<groupId>org.springframework.boot</groupId>
@@ -57,12 +70,6 @@
 			<scope>test</scope>
 		</dependency>
 
-		<!-- Dependencia para postgreSQL DRIVER -->
-		<dependency>
-			<groupId>org.postgresql</groupId>
-			<artifactId>postgresql</artifactId>
-			<version>42.7.5</version>
-		</dependency>
 	</dependencies>
 
 	<build>
