--- a/pom.xml
+++ b/pom.xml
@@ -27,7 +27,7 @@
 		<url/>
 	</scm>
 	<properties>
-		<java.version>21</java.version>
+		<java.version>21</java.version> <!-- Usando Java 21 -->
 	</properties>
 	<dependencies>
 		<!-- Dependencia de Spring Boot Starter Web para realizar peticiones HTTP -->
@@ -69,7 +69,6 @@
 			<artifactId>spring-boot-starter-test</artifactId>
 			<scope>test</scope>
 		</dependency>
-
 	</dependencies>
 
 	<build>
@@ -77,6 +76,14 @@
 			<plugin>
 				<groupId>org.springframework.boot</groupId>
 				<artifactId>spring-boot-maven-plugin</artifactId>
+			</plugin>
+			<plugin>
+				<groupId>org.apache.maven.plugins</groupId>
+				<artifactId>maven-compiler-plugin</artifactId>
+				<configuration>
+					<source>21</source> <!-- Usando Java 21 -->
+					<target>21</target> <!-- Usando Java 21 -->
+				</configuration>
 			</plugin>
 		</plugins>
 	</build>
